# cim-check

./: CHANGELOG.md  README.md  pyproject.toml
src/cimcheck/: __init__.py  check.py  cli.py  models.py
tests/: test_check.py  test_cli.py
