[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cimcheck"
version = "0.1.0"
description = "Validate events against the Splunk Common Information Model (CIM) data models."
readme = "README.md"
authors = [{ name = "Joshua John", email = "josh202@gmail.com" }]
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["splunk", "cim", "data-model", "compliance", "siem", "normalization"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
cimcheck = "cimcheck.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
